--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body class="bg-yellow-100">
    <div class="bg-red-400 h-20 flex items-center justify-evenly">
-       <h1 class="text-2xl md:text-3xl lg:text-4xl">LEGENDARY CAT TRIBUTES</h1>
+       <h1 class="text-2xl">LEGENDARY CAT TRIBUTES</h1>
        <input type="text" class="border-2  border-red-200 h-10 w-64 ">
-       <a href="#" target="_blank" class="absolute right-10 md:right-16 lg:right-32 xl:right-56 2xl:right-72">
+       <a href="#" target="_blank" class="absolute right-10">
        <svg class="w-6 stroke-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
         </svg>
@@ -19,11 +19,11 @@
    </div>
 
    <div class="mx-40 pt-2">
-       <h2 class="text-center text-xl sm:text-2xl md:text-2xl lg:text-3xl xl:text-3xl 2xl:text-4xl mt-5">
+       <h2 class="text-center text-xl mt-5">
            A Tribute To The Legendary Cat Bow Meow
        </h2>
        <img src="images/download (9).jfif" alt="picture of bow meow" class="block mx-auto mt-5">
-       <p class="text-justify mx-auto mt-5 lg:mx-20">
+       <p class="text-justify mx-auto mt-5">
         Enim dolorem consequat for odit reprehenderit. 
         Inventore. Adipisci aute vel laudantium yet incidunt architecto. 
         Sed iure so esse omnis iste. Mollit. Magna. Magna fugit and omnis ullam, sunt. 
@@ -36,19 +36,19 @@
         Incididunt mollit, consequat sed occaecat magni illum. 
         Nequeporro nostrum nisi consequuntur voluptas and fugit do.
        </p>
-       <button class="w-40 mt-5 h-14 bg-yellow-300 lg:ml-20">
+       <button class="w-40 mt-5 h-14 bg-yellow-300">
         <a href="#" target="_blank">
             Read More
         </a>
        </button>   
    </div>
 
-   <div class="mx-40 pt-4 sm:pt-4 md:pt-6 lg:pt-10 xl:pt-12 2xl:pt-16">
-       <h2 class="text-center text-xl sm:text-2xl md:text-2xl lg:text-3xl xl:text-3xl 2xl:text-4xl mt-5">
+   <div class="mx-40 pt-4">
+       <h2 class="text-center text-xl mt-5">
         A Tribute To The Legendary Cat Queen Tay
        </h2>
        <img src="images/download (10).jpg" alt="picture of queen tay" class="block mx-auto mt-5">
-       <p class="text-justify mx-auto mt-5 lg:mx-20">
+       <p class="text-justify mx-auto mt-5">
         Odit minima and nisi for ratione and aliquam yet laboriosam exercitationem. 
         Enim sit for doloremque. Culpa minima or proident lorem. 
         Eiusmod aliquip but ipsam so aute, yet adipisicing. 
@@ -62,7 +62,7 @@
         Velit duis yet do consequuntur ab for aut. Laudantium laudantium. 
         Accusantium qui yet rem yet vitae. Magnam inventore.
        </p>
-       <button class="w-40 mt-5 h-14 bg-yellow-300 lg:ml-20">
+       <button class="w-40 mt-5 h-14 bg-yellow-300 ">
         <a href="#" target="_blank">
             Read More
         </a>
