--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>tailwindcss website</title>
 </head>
 <body class="bg-yellow-100">
-   <div class="bg-red-400 h-20">
-       <h1 class="text-sm">LEGENDARY CAT TRIBUTES</h1>
-       <input type="text" class="border-2  border-red-200 h-10 w-64 ">
+   <div class="bg-red-400 h-10 flex items-center justify-evenly">
+       <h1 class="text-base">LEGENDARY CAT TRIBUTES</h1>
+       <input type="text" class="border-2  border-red-200 h-10 w-64" hidden>
        <a href="#" target="_blank">
        <svg class="w-6 stroke-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
@@ -18,12 +18,12 @@
        </a>
    </div>
 
-   <div class="pt-2">
-       <h2 class="text-center text-xl mt-5">
+   <div class="">
+       <h2 class="text-center text-base mt-4">
            A Tribute To The Legendary Cat Bow Meow
        </h2>
-       <img src="images/download (9).jfif" alt="picture of bow meow" class="block mx-auto mt-5">
-       <p class="text-justify mt-5">
+       <img src="images/download (9).jfif" alt="picture of bow meow" class="mt-2 mx-auto" width="400px">
+       <p class="text-justify mt-2 text-xs mx-10">
         Enim dolorem consequat for odit reprehenderit. 
         Inventore. Adipisci aute vel laudantium yet incidunt architecto. 
         Sed iure so esse omnis iste. Mollit. Magna. Magna fugit and omnis ullam, sunt. 
@@ -36,19 +36,19 @@
         Incididunt mollit, consequat sed occaecat magni illum. 
         Nequeporro nostrum nisi consequuntur voluptas and fugit do.
        </p>
-       <button class="w-40 mt-5 h-14 bg-yellow-300">
-        <a href="#" target="_blank">
+       <button class="w-20 mt-2 h-10 bg-yellow-300 ml-10">
+        <a href="#" target="_blank" class="text-xs">
             Read More
         </a>
        </button>   
    </div>
 
    <div class="pt-4">
-       <h2 class="text-center text-xl mt-5">
+       <h2 class="text-center text-base mt-5 mb-2">
         A Tribute To The Legendary Cat Queen Tay
        </h2>
-       <img src="images/download (10).jpg" alt="picture of queen tay" class="block mx-auto mt-5">
-       <p class="text-justify mt-5">
+       <img src="images/download (10).jpg" alt="picture of queen tay" class="mx-auto" width="400px">
+       <p class="text-justify mt-2 text-xs mx-10">
         Odit minima and nisi for ratione and aliquam yet laboriosam exercitationem. 
         Enim sit for doloremque. Culpa minima or proident lorem. 
         Eiusmod aliquip but ipsam so aute, yet adipisicing. 
@@ -62,16 +62,16 @@
         Velit duis yet do consequuntur ab for aut. Laudantium laudantium. 
         Accusantium qui yet rem yet vitae. Magnam inventore.
        </p>
-       <button class="w-40 mt-5 h-14 bg-yellow-300">
-        <a href="#" target="_blank">
+       <button class="w-20 mt-2 h-10 bg-yellow-300 ml-10">
+        <a href="#" target="_blank" class="text-xs">
             Read More
         </a>
        </button>  
    </div>
 
    <footer class="bg-red-400 mt-5">
-       <div class="text-center text-2xl flex items-center justify-center">
-        <svg class="w-6 h-6 mt-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+       <div class="text-center text-base flex items-center justify-center">
+        <svg class="w-4 h-4 mt-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z">
             </path>
         </svg>
@@ -80,9 +80,9 @@
             Share on
         </p>  
        </div>
-       <div>
-           <img src="images/download__3_-removebg-preview.png" alt="" class="h-16">
-           <img src="images/download__6_-removebg-preview.png" alt="" class="h-16">
+       <div class="flex items-center justify-center ">
+           <img src="images/download__3_-removebg-preview.png" alt="" class="h-6">
+           <img src="images/download__6_-removebg-preview.png" alt="" class="h-6">
        </div>
    </footer>
 </body>
