--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            A Tribute To The Legendary Cat Bow Meow
        </h2>
        <img src="images/download (9).jfif" alt="picture of bow meow" class="mt-2 mx-auto" width="400px">
-       <p class="text-justify mt-2 text-base mx-10">
+       <p class="text-justify mt-2 text-xs mx-10">
         Enim dolorem consequat for odit reprehenderit. 
         Inventore. Adipisci aute vel laudantium yet incidunt architecto. 
         Sed iure so esse omnis iste. Mollit. Magna. Magna fugit and omnis ullam, sunt. 
@@ -37,7 +37,7 @@
         Nequeporro nostrum nisi consequuntur voluptas and fugit do.
        </p>
        <button class="w-20 mt-2 h-10 bg-yellow-300 ml-10">
-        <a href="#" target="_blank" class="text-base">
+        <a href="#" target="_blank" class="text-xs">
             Read More
         </a>
        </button>   
@@ -48,7 +48,7 @@
         A Tribute To The Legendary Cat Queen Tay
        </h2>
        <img src="images/download (10).jpg" alt="picture of queen tay" class="mx-auto" width="400px">
-       <p class="text-justify mt-2 text-base mx-10">
+       <p class="text-justify mt-2 text-xs mx-10">
         Odit minima and nisi for ratione and aliquam yet laboriosam exercitationem. 
         Enim sit for doloremque. Culpa minima or proident lorem. 
         Eiusmod aliquip but ipsam so aute, yet adipisicing. 
@@ -63,7 +63,7 @@
         Accusantium qui yet rem yet vitae. Magnam inventore.
        </p>
        <button class="w-20 mt-2 h-10 bg-yellow-300 ml-10">
-        <a href="#" target="_blank" class="text-base">
+        <a href="#" target="_blank" class="text-xs">
             Read More
         </a>
        </button>  
